# torch-admm-deconv

./: .gitignore  README.md  environment.yml  make_blur_dset.py  make_dset.py  make_realblur_dset.py  pyproject.toml  test_train.ipynb  train.py
NAFNET/: environment.yml
NAFNET/basicsr/: train.py
NAFNET/basicsr/data/: etransforms.py
NAFNET/basicsr/models/: image_restoration_model.py
configs/: train_cfg.json
elayers/: admmdeconv.py  admmfusion.py  attentionpool.py  attentions.py  cwa.py  histattention.py  simple_ch_attention.py  varmap.py
emetrics/: metrics.py
eops/: deconv.py
eprocessing/: dataload.py  etransforms.py
etrain/: logger.py  saver.py  trainer.py
modelbuild/: autoencoder.py  blocks.py  deconver.py  denoiser.py  nafnet.py  restorer.py  updownscale.py
notebooks/: eval_algs.ipynb  test_torch_admm.ipynb  test_train.ipynb
scripts/: get_rnind_dset.py  make_blur_dset.py  nind_dset.py  train.py
src/admmtor/elayers/: __init__.py  admmdeconv.py  admmfusion.py  attentionpool.py  channel_max_pool.py  cwa.py  local_attention_patch.py  sra.py
src/admmtor/emetrics/: metrics.py
src/admmtor/eops/: deconv.py
src/admmtor/etrain/: logger.py  saver.py  trainer.py
src/admmtor/modelbuild/: autoencoder.py  blocks.py  deconver.py  denoiser.py  denoiser_v2.py  eregularizers.py  nafnet.py  restorer.py  updownscale.py
src/admmtor/utils/: dset_utils.py  train_utils.py
utils/: dset_utils.py  train_utils.py
